# beat-machine

./: .bumpversion.cfg  .gitignore  .pre-commit-config.yaml  .travis.yml  EFFECTS.md  LICENSE  Pipfile  README.md  README.rst  pyproject.toml  requirements.txt  setup.py  tasks.py
.github/: FUNDING.yml
.github/workflows/: deploy.yml  python.yml  test.yml
beatmachine/: __init__.py  __main__.py  backend.py  beat_effects.py  beats.py  dump_schema.py  editor.py  effect_loader.py  effect_registry.py  loader.py  processor.py  registry.py  song_effects.py  utils.py
beatmachine/backends/: bpm.py  madmom.py
beatmachine/effects/: __init__.py  base.py  cut.py  periodic.py  randomize.py  remap.py  remove.py  repeat.py  reverse.py  reverse_order.py  silence.py  song.py  swap.py  temporal.py
docs/: beatmachine.beats.rst  beatmachine.effects.base.rst  beatmachine.effects.periodic.rst  beatmachine.effects.rst  beatmachine.effects.temporal.rst  beatmachine.loader.rst  beatmachine.rst  cli.rst  conf.py  index.rst  json_effects.rst  modules.rst
docs/source/: beatmachine.effects.rst  beatmachine.rst  modules.rst
examples/: 1st_half_of_each_beat.json  2nd_half_of_each_beat.json  README.md  randomize_everything.json  remove_every_other.json  reverse_beat_order.json  swap_1_3.json  swap_2_4.json  swap_2_4_and_cut.json
test/: __init__.py  test_beat_effects.py  test_effect_loading.py  test_periodic_effects.py  test_song_effects.py
test/effects/: effect_test_util.py  test_remap.py  test_remove.py  test_repeat.py  test_silence.py  test_swap.py
tests/: conftest.py  test_effect_loader.py  test_effect_loading.py  test_load_effects.py  test_load_supported_formats.py  test_periodic_effects.py  test_song_effects.py
tests/effects/: effect_test_util.py  test_cut.py  test_periodic.py  test_remove.py  test_repeat.py  test_reverse.py  test_reverse_order.py  test_silence.py
