[tool.poetry]
name = "beatmachine"
version = "4.0.0-alpha.2"
description = "A library for procedurally remixing songs"
authors = ["branchpanic <hi@branchpanic.me>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
madmom = {git = "https://github.com/CPJKU/madmom.git", rev = "3bc8334099feb310acfce884ebdb76a28e01670d"}
jsonschema = "^3.2.0"
numpy = ">=1.23.0"
click = "^8.1.3"
librosa = "^0.9.2"

[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
pytest = "^7.1.3"
isort = "^5.10.1"

[tool.poetry.scripts]
beatmachine = 'beatmachine.__main__:cli'

[tool.black]
line-length = 120

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
filterwarnings = [
    "error",
    "ignore::DeprecationWarning:madmom.features.onsets"
]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
