[tool.poetry]
name = "beatmachine"
version = "4.0.0-alpha.4"
description = "A library for procedurally remixing songs"
authors = ["branchpanic <hi@branchpanic.me>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.12"
madmom = {git = "https://github.com/CPJKU/madmom.git", rev = "27f032e8947204902c675e5e341a3faf5dc86dae"}
jsonschema = "^4.23.0"
numpy = "^2.1.3"
click = "^8.1.7"
soundfile = "^0.12.1"

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
pytest = "^8.3.4"
isort = "^5.13.2"

[tool.poetry.scripts]
beatmachine = 'beatmachine.__main__:cli'

[tool.black]
line-length = 120

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
filterwarnings = [
    "error",
    "ignore::DeprecationWarning:madmom"
]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
